--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -83,7 +83,7 @@ label-urgent-background = ${colors.underline}
 label-urgent-padding = 2
 
 ws-icon-0 = 1;
-ws-icon-1 = 2;
+ws-icon-1 = 2;
 ws-icon-2 = 3;
 ws-icon-3 = 4;
 ws-icon-4 = 5;
