Update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,4 +46,4 @@ set-option -g allow-rename off
 #   Styles from here on out
 #
 # -------------------------------
-
+source-file "${HOME}/.tmux-themepack/powerline/default/cyan.tmuxtheme"
