--- a/.config/.tmux.conf
+++ b/.config/.tmux.conf
@@ -1,10 +1,10 @@
 # Set default terminal
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
 
 
 
 # use zsh as default
-set-option -g default-shell /bin/zsh
+#set-option -g default-shell /bin/zsh
 
 
 
@@ -46,4 +46,4 @@ set-option -g allow-rename off
 #   Styles from here on out
 #
 # -------------------------------
-source-file "${HOME}/.tmux-themepack/powerline/default/cyan.tmuxtheme"
+source-file "${HOME}/.styles/tmux/cyan.tmuxtheme"
