--- a/.config/tmux.conf
+++ b/.config/tmux.conf
@@ -1,13 +1,3 @@
-# Set default terminal
-#set -g default-terminal "screen-256color"
-
-
-
-# use zsh as default
-#set-option -g default-shell /bin/zsh
-
-
-
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
@@ -46,4 +36,4 @@ set-option -g allow-rename off
 #   Styles from here on out
 #
 # -------------------------------
-source-file "${HOME}/.styles/tmux/cyan.tmuxtheme"
+source-file "$(DOTS)/.styles/tmux/cyan.tmuxtheme"
