--- a/.config/.tmux.conf
+++ b/.config/.tmux.conf
@@ -1,11 +1,11 @@
-# remap prefix from 'C-b' to 'C-a'
+# Remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
 
 
-# split panes using '|' and '-'
+# Split panes using '|' and '-'
 bind : split-window -h
 bind - split-window -v
 unbind '"'
@@ -13,12 +13,12 @@ unbind %
 
 
 
-# reload config file
+# Reload config file
 bind r source-file ~/.tmux.conf
 
 
 
-# switch panes using Alt-arrow without prefix
+# Switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
@@ -26,14 +26,10 @@ bind -n M-Down select-pane -D
 
 
 
-# don't rename windows automatically
+# Don't rename windows automatically
 set-option -g allow-rename off
 
 
 
-# -------------------------------
-#
-#   Styles from here on out
-#
-# -------------------------------
-source-file "$(DOTS)/.styles/tmux/cyan.tmuxtheme"
+# Custom theme
+source-file "$STYLES/tmux/cyan.tmuxtheme"
