--- a/.config/tmux.conf
+++ b/.config/tmux.conf
@@ -1,3 +1,8 @@
+# Behaviour
+set -g default-terminal "tmux-256color"
+
+
+
 # Remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
