--- a/build
+++ b/build
@@ -26,3 +26,8 @@ ln -s "$DOTS/.config/tmux/tmux.conf" ~/.tmux.conf
 # i3
 rm -rf ~/.config/i3
 ln -s "$DOTS/.config/i3" ~/.config
+
+# polybar
+rm -rf ~/.config/polybar
+ln -s "$DOTS/.config/polybar" ~/.config
+
