--- a/build
+++ b/build
@@ -34,3 +34,6 @@ ln -s "$DOTS/.config/sxhkd" ~/.config
 rm -rf ~/.config/polybar
 ln -s "$DOTS/.config/polybar" ~/.config
 
+# compton
+rm -rf ~/.config/compton.conf
+ln -s "$DOTS/.config/compton" ~/.config
