Replace all variables with ix inclusions

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -42,4 +42,4 @@ set-option -g allow-rename off
 
 
 # Custom theme
-source-file "$STYLES/tmux/cyan.tmuxtheme"
+source-file "#{{ paths.styles }}/tmux/cyan.tmuxtheme"
