--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -35,10 +35,8 @@ foreground = ${colors.foreground}
 
 module-margin = 1
 
-font-0 = "Lat2-Terminus16:size=8;2"
-font-1 = "Lat2-Terminus16:size=10;2"
-font-2 = "Lat2-Terminus16:size=12:weight=bold;2"
-font-3 = "Lat2-Terminus16:size=13;2"
+font-0 = "JetBrainsMono Nerd Font:size=8;2"
+font-1 = FontAwesome:size=10;2
 
 modules-left = menu0 workspaces
 modules-center = date
