--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -4,7 +4,7 @@
 
 
 # Behaviour
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 
 
 
@@ -29,10 +29,10 @@ bind r source-file ~/.tmux.conf
 
 
 # Switch panes using Alt-arrow without prefix
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind -n C-Left select-pane -L
+bind -n C-Right select-pane -R
+bind -n C-Up select-pane -U
+bind -n C-Down select-pane -D
 
 
 
