--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -2,6 +2,8 @@
 #: to: $HOME/.config/polybar
 
 
+
+
 [colors]
 background = #00181b21
 background-alt = #1D1F21
@@ -14,18 +16,16 @@ secondary = #e60053
 underline = #7289DA
 alert = #bd2c40
 
+
 [constants]
 padding = 2
 
 
+
+
 [bar/main]
 monitor = ${env:MONITOR}
-; for dual monitors
-; monitor = ${env:MONITOR}
-; In order to run this properly through the command line use this
-; # MONITOR=firstMon polybar main
-; # MONITOR=secondMon polybar main
-height = 32
+height = 30
 bottom = false
 top = true
 fixed-center = true
@@ -38,13 +38,26 @@ module-margin = 1
 font-0 = "JetBrainsMono Nerd Font:size=8;2"
 font-1 = FontAwesome:size=10;2
 
-modules-left = menu0 workspaces
-modules-center = date
+modules-left = power workspaces
+modules-center = xwindow
 modules-right = cpu wireless
 
 tray-position = right
 tray-detached = false
 tray-max-size = 16
+
+
+
+[module/xwindow]
+type = internal/xwindow
+label = %title%
+label-maxlen = 120
+label-emptey = Desktop
+
+format = <label>
+format-prefix = "  "
+
+
 
 [module/workspaces]
 type = internal/bspwm
@@ -84,33 +97,6 @@ label-occupied-padding = ${constants.padding}
 label-visible-padding = ${constants.padding}
 label-unfocused-padding = ${constants.padding}
 
-[module/cpu]
-format-label = internal/cpu
-
-format = <label>
-
-ramp-coreload-0 = ▁
-ramp-coreload-1 = ▂
-ramp-coreload-2 = ▃
-ramp-coreload-3 = ▄
-ramp-coreload-4 = ▅
-ramp-coreload-5 = ▆
-ramp-coreload-6 = ▇
-ramp-coreload-7 = █
-
-type = internal/cpu
-interval = 2
-label = %{F${colors.foreground} %percentage% %{F-}%
-padding = 2
-label-background = ${colors.background}
-
-[module/wireless]
-type = internal/network
-interface = wlp7s0
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-connected =  %essid%
-label-disconnected = 
 
 
 [module/date]
@@ -123,13 +109,17 @@ time = %H:%M:%S
 label = %date% %time%
 
 
-[module/menu0]
+
+
+[module/power]
 type = custom/script
 label-padding = 2
 exec = echo ""
 click-left = #{{ paths.scripts }}/menus/power-menu
 
 format-foreground = ${colors.underline}
+
+
 
 [settings]
 screenchange-reload = true
