--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -33,6 +33,7 @@ fixed-center = true
 background = ${colors.background}
 foreground = ${colors.foreground}
 
+padding = 2
 module-margin = 1
 
 font-0 = "JetBrainsMono Nerd Font:size=8;2"
@@ -40,7 +41,7 @@ font-1 = FontAwesome:size=10;2
 
 modules-left = power workspaces
 modules-center = xwindow
-modules-right = cpu wireless
+modules-right = time
 
 tray-position = right
 tray-detached = false
@@ -99,21 +100,18 @@ label-unfocused-padding = ${constants.padding}
 
 
 
-[module/date]
+
+[module/time]
 type = internal/date
 interval = 1
-
-date = %B %d %Y,
 time = %H:%M:%S
-
-label = %date% %time%
+label = %time%
 
 
 
 
 [module/power]
 type = custom/script
-label-padding = 2
 exec = echo ""
 click-left = #{{ paths.scripts }}/menus/power-menu
 
