--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -45,11 +45,11 @@ padding = ${constants.padding}
 module-margin = 1
 
 font-0 = "JetBrainsMono Nerd Font:size=9;2"
-font-1 = FontAwesome:size=10;2
+font-1 = "Material Design Icons:size=10;2"
 
 modules-left = power workspaces
 modules-center = xwindow
-modules-right = time battery
+modules-right = time wifi battery
 
 tray-position = right
 
@@ -100,10 +100,27 @@ full-at = 99
 battery = BAT0
 adapter = AC
 poll-interval = 5
-# TODO: Change later with actual animations and icons
-label-charging = "Charging %percentage%%"
-label-discharging = "Discharging %percentage%%"
-label-full = "Fully Charged"
+
+label-charging = "%percentage%%"
+label-discharging = "%percentage%%"
+label-full = 󰁹
+
+format-charging = <animation-charging><label-charging>
+format-discharging = <ramp-capacity><label-discharging>
+
+ramp-capacity-0 = 󰁺
+ramp-capacity-1 = 󰁻
+ramp-capacity-2 = 󰁾
+ramp-capacity-3 = 󰂀
+ramp-capacity-4 = 󰁹
+
+animation-charging-0 = 󰂆
+animation-charging-1 = 󰂇
+animation-charging-2 = 󰂈
+animation-charging-3 = 󰂉
+animation-charging-4 = 󰂅
+
+animation-charging-framerate = 1500
 
 
 
@@ -113,6 +130,26 @@ exec = echo ""
 click-left = #{{ paths.scripts }}/menus/power-menu
 format-foreground = #373f51
 
+
+
+[module/wifi]
+type = internal/network
+interface = wlp0s20f3
+interval = 5.0
+
+format-connected = <ramp-signal> <label-connected>
+format-disconnected = <label-disconnected>
+
+label-connected = %essid%
+label-disconnected = 󰤮
+label-disconnected-foreground = #{{ hex #f4f4f4; 0.5 }}
+
+ramp-signal-0 = 󰤫
+ramp-signal-1 = 󰤟
+ramp-signal-2 = 󰤢
+ramp-signal-3 = 󰤢
+ramp-signal-4 = 󰤨
+ramp-signal-5 = 󰤨
 
 
 [settings]
