--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -143,10 +143,9 @@ type = internal/network
 interface = wlp0s20f3
 interval = 5.0
 
-format-connected = <ramp-signal> <label-connected>
+format-connected = <ramp-signal>
 format-disconnected = <label-disconnected>
 
-label-connected = %essid%
 label-disconnected = 󰤮
 label-disconnected-foreground = #{{ hex #f4f4f4; 0.5 }}
 
