--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -49,7 +49,7 @@ font-1 = "Material Design Icons:size=10;2"
 
 modules-left = power workspaces
 modules-center = xwindow
-modules-right = time microphone-status wifi battery
+modules-right = time microphone-status audio-status wifi battery
 
 tray-position = right
 
@@ -131,10 +131,18 @@ click-left = #{{ paths.scripts }}/menus/power-menu
 format-foreground = #373f51
 
 
+
 [module/microphone-status]
 type = custom/script
 exec = #{{ paths.scripts }}/polybar/microphone-status
 click-left = "#{{ paths.scripts }}/control/microphone toggle"
+
+
+
+[module/audio-status]
+type = custom/script
+exec = #{{ paths.scripts }}/polybar/audio-status
+click-left = "#{{ paths.scripts }}/control/volume toggle"
 
 
 
