--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -182,8 +182,8 @@ font:
 colors:
   # Default colors
   primary:
-    background: '#1d1f21'
-    foreground: '#c5c8c6'
+    background: '#181b21'
+    foreground: '#d9d9d9'
 
     # Bright and dim foreground colors
     #
@@ -191,8 +191,8 @@ colors:
     # present. If the bright foreground color is not set, or
     # `draw_bold_text_with_bright_colors` is `false`, the normal foreground
     # color will be used.
-    dim_foreground: '#828482'
-    bright_foreground: '#eaeaea'
+    dim_foreground: '#d9d9d9'
+    bright_foreground: '#f4f4f4'
 
   # Cursor colors
   #
