Convert the remaining menus to static templates (better performance)

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -135,7 +135,7 @@ animation-charging-framerate = 1500
 [module/power]
 type = custom/script
 exec = echo ""
-click-left = #{{ paths.scripts }}/menus/power-menu
+click-left = #{{ configs.menus }}/power-menu
 format-foreground = #373f51
 
 
@@ -143,7 +143,7 @@ format-foreground = #373f51
 [module/notifications]
 type = custom/script
 exec = echo "󰀼"
-click-left = #{{ paths.scripts }}/menus/notification-center
+click-left = #{{ configs.menus }}/notification-center
 format-foreground = #373f51
 
 
@@ -169,8 +169,8 @@ interval = 5.0
 
 # Checkout https://github.com/polybar/polybar/wiki/Formatting#action-a
 # for "Format tags" explanations as well as extra action buttons
-format-connected = "%{A1:#{{ paths.scripts }}/menus/wifi-menu:}<ramp-signal>%{A}"
-format-disconnected = "%{A1:#{{ paths.scripts }}/menus/wifi-menu:}<label-disconnected>%{A}"
+format-connected = "%{A1:#{{ configs.menus }}/wifi-menu:}<ramp-signal>%{A}"
+format-disconnected = "%{A1:#{{ configs.menus }}/wifi-menu:}<label-disconnected>%{A}"
 
 label-disconnected = 󰤮
 label-disconnected-foreground = #{{ hex #f4f4f4; alpha: 0.5 }}
