--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -182,7 +182,7 @@ font:
 colors:
   # Default colors
   primary:
-    background: '#181b21'
+    background: '#0c0f14'
     foreground: '#d9d9d9'
 
     # Bright and dim foreground colors
@@ -360,7 +360,7 @@ colors:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.98
+background_opacity: 0.73
 
 #selection:
   # This string contains all characters that are used as separators for
