--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -12,7 +12,6 @@ vsync = true;
 corner-radius = 8.0;
 round-borders = 1;
 rounded-corners-exclude = [
-    "class_g = 'dunst'",
     "class_g = 'Rofi'"
 ];
 
@@ -38,10 +37,13 @@ blur-method = "dual_kawase";
 blur-strength = 10;
 blur-background = true;
 blur-background-fixed = true;
+blur-background-exclude = [
+    "class_g = 'Polybar'"
+];
 
-transition-length = 50;
-transition-pow-x = 0.99;
-transition-pow-y = 0.99;
-transition-pow-w = 0.99;
-transition-pow-h = 0.99;
+transition-length = 1;
+transition-pow-x = 0.1;
+transition-pow-y = 0.1;
+transition-pow-w = 0.1;
+transition-pow-h = 0.1;
 size-transition = true;
