--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,6 +1,7 @@
 #: ix-config
 #: to: $HOME/.config/alacritty
 
+
 # Configuration for Alacritty, the GPU enhanced terminal emulator.
 
 # Import additional configuration files
@@ -114,7 +115,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: FiraCode Nerd Font
+    family: #{{ fonts.terminal }}
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -125,7 +126,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FiraCode Nerd Font
+    family: #{{ fonts.terminal }}
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -136,7 +137,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FiraCode Nerd Font
+    family: #{{ fonts.terminal }}
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -147,13 +148,13 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FiraCode Nerd Font
+    family: #{{ fonts.terminal }}
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
 
   # Point size
-  size: 7
+  size: 6.5
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
@@ -360,7 +361,7 @@ colors:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.73
+background_opacity: 0.83
 
 #selection:
   # This string contains all characters that are used as separators for
