--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -38,7 +38,7 @@ blur-strength = 10;
 blur-background = true;
 blur-background-fixed = true;
 blur-background-exclude = [
-    "class_g = 'Alacritty'",
+#    "class_g = 'Alacritty'",
     "class_g = 'Polybar'"
 ];
 
