--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -22,7 +22,8 @@ shadow-offset-x = -40;
 shadow-offset-y = -20;
 shadow-opacity = 0.45;
 shadow-exclude = [
-    "class_g = 'Polybar'"
+    "class_g = 'Polybar'",
+    "class_g = 'Dunst'"
 ];
 
 
