Shortcut to rebuild config files

--- a/.config/global/tasks.json
+++ b/.config/global/tasks.json
@@ -42,5 +42,10 @@
     {
         "name": "toggle volume",
         "command": "#{{ paths.scripts }}/control/volume toggle"
+    },
+
+    {
+        "name": "rebuild configuration files (palace.json)",
+        "command": "ix -r ~/dots/.config/rules/palace.json"
     }
 ]
